# pyrefly-2036-rename-symbols

./: .gitignore  README.md  pyproject.toml
analysis/: case.py
config/: .gitignore  settings.toml
src/: my_module.py
src/project/: __init__.py  run.py  settings.py
